# nes

./: .gitignore  .gitlab-ci.yml  .rustfmt.toml  .travis.yml  Cargo.toml  flake.nix  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: check.yml
benches/: frame.rs
src/: cpu.rs  instruction.rs  main.rs  memory.rs  rom.rs  sdl.rs
src/nes/: bits.rs  controller.rs  cpu.rs  debug.rs  instruction.rs  lib.rs  mapper.rs  memory.rs  pin.rs  ppu.rs  rom.rs
src/nes/mappers/: mmc1.rs  mod.rs  nrom.rs
tests/: blargg.rs  gblargg.rs  nestest.rs  rom.rs
tests/snapshots/: nestest__nestest.snap
