[package]
name = "nes"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2021"

[lib]
name = "nes"
path = "src/nes/lib.rs"
bench = false
doctest = false

[[bin]]
name = "nes"
bench = false
doc = false
test = false

[dependencies]
nom = { version = "~5.1", features = ["std"] }
log = { version = "~0.4", features = ["release_max_level_info"] }
simplelog = "~0.12"
sdl2 = "~0.35"
clap = { version = "~4.1", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "~1.3"
colored = "~2.0"
criterion = "~0.4"

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[[bench]]
name = "frame"
harness = false
