[package]
name = "nes"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2021"

[lib]
name = "nes"
path = "src/nes/lib.rs"
bench = false
doctest = false

[[bin]]
name = "nes"
bench = false
doc = false
test = false

[dependencies]
nom = { version = "~5.1", features = ["std"] }
log = { version = "~0.4", features = ["release_max_level_info"] }
simplelog = "~0.12"
sdl2 = "~0.37"
clap = { version = "~4.5", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "~1.4"
colored = "~2.1"
criterion = "~0.5"

[profile.dev]
opt-level = 1

[profile.release]
debug = true

[[bench]]
name = "frame"
harness = false
