[package]
name = "nes"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2024"

[lib]
name = "nes"
path = "src/nes/lib.rs"
bench = false
doctest = false

[[bin]]
name = "nes"
bench = false
doc = false
test = false

[dependencies]
nom = { version = "~8.0", features = ["std"] }
log = { version = "~0.4", features = ["release_max_level_info"] }
simplelog = "~0.12"
sdl2 = { version = "~0.37", features = ["gfx"] }
clap = { version = "~4.5", features = ["derive"] }
bitflags = "2.9.1"

[dev-dependencies]
pretty_assertions = "~1.4"
colored = "~3.0"
criterion = "~0.5"

[profile.dev]
opt-level = 1

[profile.release]
lto = "fat"
debug = true

[[bench]]
name = "frame"
harness = false
